--- a/users-service/package.json
+++ b/users-service/package.json
@@ -4,12 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo",
     "watch": "babel-watch -L src/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-watch": "^7.7.0"
+    "babel-watch": "^7.7.0",
+    "sequelize-cli": "^6.4.1"
+  },
+  "dependencies": {
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.3"
   }
 }
