--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -15,10 +15,10 @@
   "dependencies": {
     "apollo-server-core": "^3.10.0",
     "apollo-server-express": "^3.10.0",
-    "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "got": "^11.8.3",
     "graphql": "^15.x",
     "lodash": "^4.17.21"
   }
